--- a/views/uploading.pug
+++ b/views/uploading.pug
@@ -148,8 +148,9 @@ block content
                             a.categoryValue(style="cursor:pointer;" data-value=category.name data-displayname=category.displayName) #{category.displayName}
 
                   br
+                  div#categoryScrollTo(style="")
                   br
-                  div.categoryName(style="display:none")
+                  div.categoryName#categoryName(style="display:none")
                     h5.fw(style="font-size:20px;").categoryDisplayName Category: $Thing
                     br
 
@@ -164,7 +165,7 @@ block content
                         each subcategory in category.subcategories
                             div.radio-buttons.subcategory(class=category.name style="display:none")
                               label.fw.radio-inline(style="margin-top:7px;font-size:15px;")
-                                input.radio-button(type='radio', name='subcategory' value=subcategory.name required)
+                                input.radio-button.subcategoryOption(type='radio', name='subcategory' value=subcategory.name required)
                                 | #{subcategory.displayName}
 
                               br
@@ -232,6 +233,24 @@ block content
   script.
     $(document).ready(function () {
 
+      // scroll down and focus description when category is changed
+      $('.categoryValue').on('click', function(){
+        $('#description').focus()
+        // have to do a setTimeout for event loop
+        setTimeout(function(){
+          document.getElementById('categoryName').scrollIntoView({ behavior: 'smooth' });
+        }, 1)
+      })
+
+      // scroll down and focus description when category is changed
+      $('.subcategoryOption').on('click', function () {
+        $('#description').focus()
+        // TODO: would be better if it scrolled down just a smidge to visually bring attention back to description
+        setTimeout(function () {
+          document.getElementById('description').scrollIntoView({behavior: 'smooth'});
+        }, 1)
+      })
+
       // progress bar stuff
       var bar1 = new ldBar("#myItem1");
 
@@ -264,6 +283,8 @@ block content
 
         console.log(value, displayName);
       })
+
+
 
       var privs = #{user.privs}
 
