--- a/views/account/account.pug
+++ b/views/account/account.pug
@@ -139,7 +139,7 @@ block content
 
             - Livestreaming with live chat
 
-            - Custom Channel Url: newtube.app/#{user.channelUrl} instead of newtube.app/user/#{user.channelUrl}
+            - Shortened Url: newtube.app/#{user.channelUrl} instead of newtube.app/user/#{user.channelUrl}
 
             - $4.95/month, cancel at any time
 
