--- a/views/viewPartials/adminSensitivityButtons.pug
+++ b/views/viewPartials/adminSensitivityButtons.pug
@@ -11,9 +11,11 @@ if user && user.role == 'admin'
 
         br
         h4 Change Visibility
-        button.btn-lg.button-success.change-visibility(visibility="public") Mark As Sensitive
-        button.btn-lg.button-success.change-visibility(visibility="") Mark As NSFW (Mature)
-        button.btn-lg.button-success.change-visibility(visibility="allAges") Mark As SFW (AllAges)
+        button.btn-lg.button-success.change-visibility(visibility="public") Public
+        button.btn-lg.button-success.change-visibility(visibility="unlisted") Unlisted
+        button.btn-lg.button-success.change-visibility(visibility="private") Private
+        button.btn-lg.button-success.change-visibility(visibility="removed") Removed
+        button.btn-lg.button-success.change-visibility(visibility="pending") Pending
 
         br
         h4 Change Category
@@ -21,92 +23,56 @@ if user && user.role == 'admin'
 
         div(style="max-width:400px;margin:0 auto;")
           each category in categories
-            button.btn-md.button-success.change-rating(category=`${category.name}`) #{category.displayName}
+            if category.displayName !== 'Category Overview' && category.displayName !== 'All Uploads'
+                button.btn-md.button-success.change-category(category=`${category.name}`) #{category.displayName}
         br
         //each category in categories
         //  button.btn-md.button-success.change-category(category=`${category.name}`) #{category.displayName}
 
-    script.
-      $('.change-rating .change-visibility').on('click', function () {
-        var checkedValues = $('input:checkbox:checked').map(function () {
-          return this.value;
-        }).get();
-
-        var csrf = '#{_csrf}'
-
-        var rating = $(this).attr('rating');
-
-        var category = $(this).attr('category');
-
-        var visibility = $(this).attr('visibility');
-
-
-        var data = {
-          rating: rating,
-          uploads: checkedValues,
-          _csrf: csrf,
-          category
-        }
-
-        console.log(data);
-
-        $.ajax({
-          type: 'POST',
-          url: `/admin/changeRatings`, // todo: change to user filter
-          data,
-          success: function (data) {
-            if (data == 'success') {
-              window.location.reload(true);
-            } else {
-              swal("Something didn't work, please contact NodeTube at ceo@nodetube.org or via the widget in the bottom right corner")
-            }
-            console.log(data);
-          },
-          error: function (err) {
-            console.log(err);
-          }
-        });
-
-
-        console.log(rating);
-      })
 
     script.
-      $('.change-category').on('click', function () {
-        var checkedValues = $('input:checkbox:checked').map(function () {
-          return this.value;
-        }).get();
+          $('.change-rating, .change-visibility, .change-category').on('click', function () {
 
-        var csrf = '#{_csrf}'
+            var checkedValues = $('input:checkbox:checked').map(function () {
+              return this.value;
+            }).get();
 
-        var category = $(this).attr('category');
+            var csrf = '#{_csrf}'
 
-        var data = {
-          rating: rating,
-          uploads: checkedValues,
-          _csrf: csrf,
-          category
-        }
+            var rating = $(this).attr('rating');
 
-        console.log(data);
+            var category = $(this).attr('category');
 
-        $.ajax({
-          type: 'POST',
-          url: `/admin/changeRatings`, // todo: change to user filter
-          data,
-          success: function (data) {
-            if (data == 'success') {
-              window.location.reload(true);
-            } else {
-              swal("Something didn't work, please contact NodeTube at ceo@nodetube.org or via the widget in the bottom right corner")
+            var visibility = $(this).attr('visibility');
+
+
+            var data = {
+              rating: rating,
+              uploads: checkedValues,
+              _csrf: csrf,
+              category,
+              visibility
             }
+
             console.log(data);
-          },
-          error: function (err) {
-            console.log(err);
-          }
-        });
+
+            $.ajax({
+              type: 'POST',
+              url: `/admin/changeRatings`, // todo: change to user filter
+              data,
+              success: function (data) {
+                if (data == 'success') {
+                  window.location.reload(true);
+                } else {
+                  swal("Something didn't work, please contact NodeTube at ceo@nodetube.org or via the widget in the bottom right corner")
+                }
+                console.log(data);
+              },
+              error: function (err) {
+                console.log(err);
+              }
+            });
 
 
-        console.log(rating);
-      })
+            console.log(rating);
+          })
