--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -149,7 +149,12 @@ block content
                                 input(type='hidden', name='user', value=`${channel._id}`)
                                 button.btn.btn-primary(name="userChangeValue" value="trustUser" type="submit" ) Trust User
                                 button.btn.btn-danger(name="userChangeValue" value="untrustUser" type="submit" ) Untrust User
+                                br
+                                br
                                 p User Trusted: #{channel.privs.autoVisibleUpload}
+                                if channel.stripeCustomerId
+                                    p Stripe Customer ID: #{channel.stripeCustomerId}
+
 
                     if user && ( user.role == 'admin' || user.role == 'moderator') && channel.status == 'restricted'
 
