update importer frontend

--- a/views/account/importer.pug
+++ b/views/account/importer.pug
@@ -47,15 +47,18 @@ block content
             h1.fw(style="display:inline") File Importer
 
             br
-            h3.fw #{brandName} supports importing from over 110 sites
-            br
-            br
+            h3.fw(style="font-size:22px") #{brandName} supports importing video from over 1000 sites
             div.formats(style="max-width:500px;margin:0 auto;")
-                p(style="font-size:20px;margin-bottom:16px;") You can click here for an entire list
-
-
-            p(style="font-size:18px;margin-bottom: 10px;") You can currently use this because you have Plus
+                p(style="font-size:20px;margin-bottom:16px;display:inline;") You can click&nbsp
+                a(href="https://ytdl-org.github.io/youtube-dl/supportedsites.html" target="_blank" style="font-size:20px;margin-bottom:16px;display:inline;") here
+                p(style="font-size:20px;margin-bottom:16px;display:inline;") &nbspfor an entire list
+            h4.fw(style="margin-top:34px;font-size:20px;") There is also a general extractor that will attempt to import video from any site you input
             br
+            br
+
+
+
+            //p(style="font-size:18px;margin-bottom: 10px;") You can currently use this because you have Plus
 
 
         .row
